my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ENVAL_param_site/ENVAL_param_site.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENVAL_param_site.dml:9:1: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENVAL_param_site.dml:11:6: error ENVAL: not a value: []
